# DragonCompiler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yaml
examples/: manifest.json
examples/monsters/: eulenbaer.json
examples/spells/: abrakadabra.json
src/dragon_compiler/: builder.py  cli.py  dragon_cli.py
tests/: test_builder.py  test_cli.py
validation/: run_db_validation.py
