[project]
name = "dragon-compiler"
version = "1.1.0"
description = "A CLI tool that compiles DnD json data into a SQLITE database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">= 3.14"
dependencies = [
    "typer==0.20.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "build>=1.2.2"
]
[project.scripts]
dragon = "dragon_compiler.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
    .github/
  | .vscode/
  | build/
  | release/
  | htmlcov/
)/
'''
skip-string-normalization = false
